service graph update

--- a/src/app/layouts/nav/nav.component.html
+++ b/src/app/layouts/nav/nav.component.html
@@ -26,11 +26,7 @@ Date: 9/13/23
         <a routerLink="/home" class="nav-link text-yellow">Home</a>
       </li>
       <li class="nav-item">
-<<<<<<< HEAD
-        <a routerLink="#" class="nav-link text-yellow">Service Repairs</a>
-=======
-        <a routerLink="/invoice-list" class="nav-link">Service Repairs</a>
->>>>>>> mwalker-dev
+        <a routerLink="/invoice-list" class="nav-link text-yellow">Service Repairs</a>
       </li>
       <li class="nav-item">
         <a routerLink="/employee-directory" class="nav-link text-yellow">Employees</a>
@@ -43,7 +39,7 @@ Date: 9/13/23
           <a routerLink="/admin/users" class="nav-link text-yellow">User Config</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/purchases-by-service" class="nav-link text-yellow">Service Graphs</a>
+          <a routerLink="/service-graph" class="nav-link text-yellow">Service Graphs</a>
         </li>
       </ng-container>
 
