--- a/src/app/service-graph/service-graph.component.html
+++ b/src/app/service-graph/service-graph.component.html
@@ -1,1 +1,7 @@
-<p>service-graph works!</p>
+<div class="container">
+    <h2 class="display-4 text-center">Service Graph</h2>
+
+    <div class="chart-container chart">
+        <canvas id="myServiceChart"></canvas>
+    </div>
+</div>
