--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -94,10 +94,10 @@ click the pen that is also under the 'Actions' tab.
         How do I submit a service repair request?
       </mat-panel-description>
     </mat-expansion-panel-header>
-    <p><b>Step 1:</b> Explanation of step one. <br>
-    <b>Step 2:</b> Explanation of step two. <br>
-<b>Step 3:</b> Explanation of step three. <br>
-<b>Step 4:</b> Explanation of step four. </p>
+    <p><p><a href="./assets/serv1.png">Step 1:</a> On the navigation bar, click on the link that says 'Service Repairs' <br>
+      <a href="./assets/serv2.png">Step 2:</a> There will be be a button marked 'add a new invoice', click on the link and it will redirect you to another page. <br>
+        <a href="./assets/serv3.png">Step 3:</a> Now that you are at the Customer Invoice page, fill out the form with the necessary information. Click the submit invoice button. <br>
+          <a href="./assets/serv4.png">Step 4:</a> Once submitted you will be taken back to the Service Repairs page where the new invoice you made is there.  </p>
   </mat-expansion-panel>
 </div>
 
@@ -112,27 +112,10 @@ click the pen that is also under the 'Actions' tab.
         How do I do a invoice summary?
       </mat-panel-description>
     </mat-expansion-panel-header>
-    <p><b>Step 1:</b> Explanation of step one. <br>
-        <b>Step 2:</b> Explanation of step two. <br>
-    <b>Step 3:</b> Explanation of step three. <br>
-    <b>Step 4:</b> Explanation of step four. </p>
+    <p><a href="./assets/serv1.png">Step 1:</a> On the navigation bar, click on the link that says 'Service Repairs' <br>
+      <a href="./assets/serv2.png">Step 2:</a> There will be be a button marked 'add a new invoice', click on the link and it will redirect you to another page. <br>
+        <a href="./assets/serv3.png">Step 3:</a> Now that you are at the Customer Invoice page, fill out the form with the necessary information. Click the submit invoice button. <br>
+          <a href="./assets/serv4.png">Step 4:</a> Once submitted you will be taken back to the Service Repairs page where the new invoice you made is there.  </p>
   </mat-expansion-panel>
 </div>
 
-<div class="container p-5 my-1">
-    <mat-expansion-panel (opened)="panelOpenState = true"
-                       (closed)="panelOpenState = false">
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        Purchases by Service
-      </mat-panel-title>
-      <mat-panel-description>
-        How do I do a purchases by service?
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-    <p><b>Step 1:</b> Explanation of step one. <br>
-        <b>Step 2:</b> Explanation of step two. <br>
-    <b>Step 3:</b> Explanation of step three. <br>
-    <b>Step 4:</b> Explanation of step four. </p>
-  </mat-expansion-panel>
-</div>
