adding code attributes

--- a/src/app/service-graph/service-graph.component.css
+++ b/src/app/service-graph/service-graph.component.css
@@ -1,3 +1,10 @@
+/**
+title: service-graph.component.css
+author: caitlynne johnson
+date: 10/2/2023 
+*/
+
+
 .chart {
     margin: 0 auto;
     width: 55%;
