--- a/src/app/service-graph/service-graph.component.html
+++ b/src/app/service-graph/service-graph.component.html
@@ -1,3 +1,9 @@
+<!-- 
+    title: service-graph.component.html
+    author: caitlynne johnson
+    date: 10/2/23
+-->
+
 <div class="container">
     <h2 class="display-4 text-center">Service Graph</h2>
 
