--- a/src/app/layouts/nav/nav.component.html
+++ b/src/app/layouts/nav/nav.component.html
@@ -63,7 +63,7 @@ Date: 9/13/23
           data-bs-toggle="dropdown"
           aria-expanded="false"
         >
-          <span class="material-icons">person</span>
+          <span class="material-icons text-yellow">person</span>
         </a>
 
         <ul
