--- a/src/app/employee-directory/employee-directory.component.html
+++ b/src/app/employee-directory/employee-directory.component.html
@@ -1,119 +1,163 @@
-<!-- 
+<!--
     title: employee-directory.component.html
     author: Caitlynne Johnson
     date: 9/20/23
 -->
 
-
 <header class="container-fluid">
-    <div class="container-p-5">
-        <hr class="my-5" />
-        <div class="row">
-            <div class="col-md-12">
-                <!-- description of the team -->
-                <h2 class="display-3 text-center">Employee Directory</h2>
-                <div class="p lead text-center">
-                    In the Employee Directory, you can see the faces of who works at Bob's Computer Repair Services 
-                    and get to know them a little bit better. 
-                </div>
-            </div>
+  <div class="container-p-5">
+    <hr class="my-5" />
+    <div class="row">
+      <div class="col-md-12">
+        <!-- description of the team -->
+        <h2 class="display-3 text-center">Employee Directory</h2>
+        <div class="p lead text-center">
+          In the Employee Directory, you can see the faces of who works at Bob's
+          Computer Repair Services and get to know them a little bit better.
         </div>
-        <!-- team member 1 bio -->
-        <div class="row my-5">
-            <div class="col-md-7">
-                <p class="lead">
-                    <strong>Bob Frank</strong> is the owner of Bob's Computer Repair Services. He started this business back 
-                    in 2018 to help those he could with his extensive knowledge about computers and information technology. On
-                    days that he isn't working (rare but it does happen), he enjoys spending time with his family, fishing, 
-                    and reading a good mystery book. Feel free to say hi to Bob if you ever see him in the shop!
-                </p>
-            </div>
-            <div class="col-md-5">
-                <img src="./assets/bob.png" alt="An old man surrounded by computers" class="img-fluid rounded"/>
-            </div>
-        </div>]
-        <!-- team member 2 bio -->
-        <div class="row my-5">
-            <div class="col-md-7">
-                <p class="lead">
-                    <strong>Harry Potter</strong> has been an employee at Bob's Computer Repair Services since it first opened 
-                    in 2018. On a whim, Harry decided to take a computer course that Bob just happened to be teaching. The course 
-                    lit a flame under Harry that pushed him to pursue a degree in computer science. On days that Harry isn't working,
-                    he enjoys indulging in various hobbies like reading and writing. 
-            </div>
-            <div class="col-md-5">
-                <img src="./assets/harry.png" alt="Harry Potter surrounded by computers." class="img-fluid rounded"/>
-            </div>
-        </div>
-        <!-- team member 3 bio -->
-        <div class="row my-5">
-            <div class="col-md-7">
-                <p class="lead">
-                    <strong>Hermione Granger</strong> has been an employee at Bob's Computer Repair Services in early 2019. A pivotal part
-                    of the team, she is your go-to person for any issue that you might have. Think there isn't a solution? Hermione
-                    will show you real quick that there is. On days that Hermione isn't working, she enjoys relaxing with a good book
-                    and a hot cup of earl grey tea. 
-                </p>
-            </div>
-            <div class="col-md-5">
-                <img src="./assets/hermione.png" alt="Hermione surrounded by computers." class="img-fluid rounded"/>
-            </div>
-        </div>
+      </div>
     </div>
-<!-- team member 4 bio -->
+    <!-- team member 1 bio -->
     <div class="row my-5">
-        <div class="col-md-7">
-            <p class="lead">
-                <strong>Ron Weasley</strong> has been an employee with Bob's Computer Repair Services since 2019. He is what
-                you would call the 'face' of the store. He's the first face that a customer will see as he works directly up
-                front handling anything or anyone who comes through the front door. On days that Ron isn't working, he enjoys 
-                spending time with his family. 
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="./assets/ron.png" alt="Ron surrounded by computers." class="img-fluid rounded"/>
-        </div>
+      <div class="col-md-7">
+        <p class="lead">
+          <strong>Bob Frank</strong> is the owner of Bob's Computer Repair
+          Services. He started this business back in 2018 to help those he could
+          with his extensive knowledge about computers and information
+          technology. On days that he isn't working (rare but it does happen),
+          he enjoys spending time with his family, fishing, and reading a good
+          mystery book. Feel free to say hi to Bob if you ever see him in the
+          shop!
+        </p>
+      </div>
+      <div class="col-md-5">
+        <img
+          src="./assets/bob.png"
+          alt="An old man surrounded by computers"
+          class="img-fluid rounded"
+        />
+      </div>
     </div>
-    <!-- team member 5 bio -->
+    <!-- team member 2 bio -->
     <div class="row my-5">
-        <div class="col-md-7">
-            <p class="lead">
-                <strong>Ginny Weasley</strong> has been an employee for Bob's Computer Repair Services since 2020. Ginny
-                is a hard worker that we are proud to have on our team. She handles all of our invoice summaries 
-                and turning feedback from our valuable customers into something we can use to better our services. On days that
-                Ginny isn't working, she enjoys spending time with her family and baking. 
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="./assets/ginny.png" alt="Ginny surrounded by computers." class="img-fluid rounded"/>
-        </div>
-    </div>
-    <!-- team member 6 bio -->
-    <div class="row my-5">
-        <div class="col-md-7">
-            <p class="lead">
-                <strong>Neville Longbottom</strong> has been an employee for Bob's Computer Repair Service since 2022. Neville greatly enjoys being a helping hand
-                and being a service to any customer that may need assistance. Recently he started his journey in computer science 
-                and is scheduled to graduate next year. On days that Neville isn't working, he enjoys working on miniature replicas 
-                and tending to his garden. 
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="./assets/neville.png" alt="Neville surrounded by computers." class="img-fluid rounded"/>
-        </div>
-    </div>
+      <div class="col-md-7">
+        <p class="lead">
+          <strong>Harry Potter</strong> has been an employee at Bob's Computer
+          Repair Services since it first opened in 2018. On a whim, Harry
+          decided to take a computer course that Bob just happened to be
+          teaching. The course lit a flame under Harry that pushed him to pursue
+          a degree in computer science. On days that Harry isn't working, he
+          enjoys indulging in various hobbies like reading and writing.
+        </p>
+      </div>
 
-    <!-- team member 7 bio -->
-    <div class="row my-5">
-        <div class="col-md-7">
-            <p class="lead">
-                <strong>Parvati Patil</strong> is a recent hire for Bob's Computer Repair Service. We are so excited to have her as our 
-                newest addition to the team! Parvati specializes in ram upgrades and disk clean-up's, and custom work. If you need something
-                done, Parvati will take care of you. On days that Parvati isn't working, she enjoys curling up on the couch with a good movie
-                and her favorite snack. 
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="./assets/parvati.png" alt="Parvati surrounded by computers." class="img-fluid rounded"/>
-        </div>
+      <div class="col-md-5">
+        <img
+          src="./assets/harry.png"
+          alt="Harry Potter surrounded by computers."
+          class="img-fluid rounded"
+        />
+      </div>
     </div>
+    <!-- team member 3 bio -->
+    <div class="row my-5">
+      <div class="col-md-7">
+        <p class="lead">
+          <strong>Hermione Granger</strong> has been an employee at Bob's
+          Computer Repair Services in early 2019. A pivotal part of the team,
+          she is your go-to person for any issue that you might have. Think
+          there isn't a solution? Hermione will show you real quick that there
+          is. On days that Hermione isn't working, she enjoys relaxing with a
+          good book and a hot cup of earl grey tea.
+        </p>
+      </div>
+      <div class="col-md-5">
+        <img
+          src="./assets/hermione.png"
+          alt="Hermione surrounded by computers."
+          class="img-fluid rounded"
+        />
+      </div>
+    </div>
+  </div>
+  <!-- team member 4 bio -->
+  <div class="row my-5">
+    <div class="col-md-7">
+      <p class="lead">
+        <strong>Ron Weasley</strong> has been an employee with Bob's Computer
+        Repair Services since 2019. He is what you would call the 'face' of the
+        store. He's the first face that a customer will see as he works directly
+        up front handling anything or anyone who comes through the front door.
+        On days that Ron isn't working, he enjoys spending time with his family.
+      </p>
+    </div>
+    <div class="col-md-5">
+      <img
+        src="./assets/ron.png"
+        alt="Ron surrounded by computers."
+        class="img-fluid rounded"
+      />
+    </div>
+  </div>
+  <!-- team member 5 bio -->
+  <div class="row my-5">
+    <div class="col-md-7">
+      <p class="lead">
+        <strong>Ginny Weasley</strong> has been an employee for Bob's Computer
+        Repair Services since 2020. Ginny is a hard worker that we are proud to
+        have on our team. She handles all of our invoice summaries and turning
+        feedback from our valuable customers into something we can use to better
+        our services. On days that Ginny isn't working, she enjoys spending time
+        with her family and baking.
+      </p>
+    </div>
+    <div class="col-md-5">
+      <img
+        src="./assets/ginny.png"
+        alt="Ginny surrounded by computers."
+        class="img-fluid rounded"
+      />
+    </div>
+  </div>
+  <!-- team member 6 bio -->
+  <div class="row my-5">
+    <div class="col-md-7">
+      <p class="lead">
+        <strong>Neville Longbottom</strong> has been an employee for Bob's
+        Computer Repair Service since 2022. Neville greatly enjoys being a
+        helping hand and being a service to any customer that may need
+        assistance. Recently he started his journey in computer science and is
+        scheduled to graduate next year. On days that Neville isn't working, he
+        enjoys working on miniature replicas and tending to his garden.
+      </p>
+    </div>
+    <div class="col-md-5">
+      <img
+        src="./assets/neville.png"
+        alt="Neville surrounded by computers."
+        class="img-fluid rounded"
+      />
+    </div>
+  </div>
+
+  <!-- team member 7 bio -->
+  <div class="row my-5">
+    <div class="col-md-7">
+      <p class="lead">
+        <strong>Parvati Patil</strong> is a recent hire for Bob's Computer
+        Repair Service. We are so excited to have her as our newest addition to
+        the team! Parvati specializes in ram upgrades and disk clean-up's, and
+        custom work. If you need something done, Parvati will take care of you.
+        On days that Parvati isn't working, she enjoys curling up on the couch
+        with a good movie and her favorite snack.
+      </p>
+    </div>
+    <div class="col-md-5">
+      <img
+        src="./assets/parvati.png"
+        alt="Parvati surrounded by computers."
+        class="img-fluid rounded"
+      />
+    </div>
+  </div>
+</header>
