fix navbar layout

--- a/src/app/layouts/nav/nav.component.html
+++ b/src/app/layouts/nav/nav.component.html
@@ -3,12 +3,12 @@ Modified by: Caitlynne Johnson
 Date: 9/13/23
 -->
 
-<nav class="dark-bg ps-3 navbar navbar-expand-sm fixed-top">
-  <a routeLink="/" class="navbar-brand text-yellow"
+<nav class="dark-bg ps-3 navbar navbar-expand-sm fixed-top row">
+  <a routeLink="/" class="navbar-brand text-yellow col"
     >Bob's Computer Repair Services</a
   >
 
-  <button
+  <!-- <button
     class="navbar-toggler"
     type="button"
     data-bs-toggle="collapse"
@@ -18,12 +18,12 @@ Date: 9/13/23
     aria-label="Toggle navigation"
   >
     <span class="navbar-toggler-icon"></span>
-  </button>
+  </button> -->
 
   <!-- navigation links -->
 
-  <div class="collapse navbar-collapse" id="navbarResponsive">
-    <ul class="navbar-nav">
+  <div class="col">
+    <ul class="navbar-nav float-end">
       <li class="nav-item">
         <a routerLink="/home" class="nav-link text-yellow">Home</a>
       </li>
