add padding top

--- a/src/app/service-graph/service-graph.component.html
+++ b/src/app/service-graph/service-graph.component.html
@@ -1,13 +1,13 @@
-<!-- 
+<!--
     title: service-graph.component.html
     author: caitlynne johnson
     date: 10/2/23
 -->
 
-<div class="container">
-    <h2 class="display-4 text-center">Service Graph</h2>
+<div class="container pt-3">
+  <h2 class="display-4 text-center">Service Graph</h2>
 
-    <div class="chart-container chart">
-        <canvas id="myServiceChart"></canvas>
-    </div>
+  <div class="chart-container chart">
+    <canvas id="myServiceChart"></canvas>
+  </div>
 </div>
