add padding to container

--- a/src/app/admin/users/user-list/user-list.component.html
+++ b/src/app/admin/users/user-list/user-list.component.html
@@ -5,9 +5,9 @@ Description: User list component
 Source: Professor Krasso, Angular.io -->
 
 <!-- component container -->
-<div class="container-fluid">
+<div class="container-fluid p-3">
   <!-- page title -->
-  <h1 class="text-center mt-3">User Configuration</h1>
+  <h1 class="text-center">User Configuration</h1>
 
   <!-- error messages -->
   <div class="alert alert-danger text-center" role="alert" *ngIf="errorMessage">
